--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,11 @@ test {
 }
 
 application {
-    mainClassName = "seedu.duke.Duke"
+    mainClassName = "athena.Athena"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "athena"
     archiveClassifier = null
 }
 
