--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ bin/
 /text-ui-test/ACTUAL.txt
 /text-ui-test/EXPECTED.TXT
 /text-ui-test/EXPECTED-UNIX.TXT
+/text-ui-test/data.csv
 
 /save.csv
 /savedata.csv
