Add sorting for Flexible tasks Add SortTaskByImportance and SortTaskByTime Flexible tasks are allocated time, need to be able to change date in the future Tasks unable to be allocated are ignored for now wake and sleep are magic numbers A lot of the command tests are broken because of changing the timeInfo arrtibutes to int Add test for TimeAllocator allocator called in Athena for lag testing

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,114 @@ bin/
 savedata.csv
 data.csv
 src/test/java/athena/loadTask.csv
+index.html
+index_SORT_BY_BLOCK.html
+index_SORT_BY_BLOCK_DESC.html
+index_SORT_BY_CLASS.html
+index_SORT_BY_CLASS_DESC.html
+index_SORT_BY_LINE.html
+index_SORT_BY_LINE_DESC.html
+index_SORT_BY_METHOD.html
+index_SORT_BY_METHOD_DESC.html
+index_SORT_BY_NAME_DESC.html
+.css/coverage.css
+.img/arrowDown.gif
+.img/arrowUp.gif
+athena/index.html
+athena/index_SORT_BY_BLOCK.html
+athena/index_SORT_BY_BLOCK_DESC.html
+athena/index_SORT_BY_CLASS.html
+athena/index_SORT_BY_CLASS_DESC.html
+athena/index_SORT_BY_LINE.html
+athena/index_SORT_BY_LINE_DESC.html
+athena/index_SORT_BY_METHOD.html
+athena/index_SORT_BY_METHOD_DESC.html
+athena/index_SORT_BY_NAME_DESC.html
+athena.commands/index.html
+athena.commands/index_SORT_BY_BLOCK.html
+athena.commands/index_SORT_BY_BLOCK_DESC.html
+athena.commands/index_SORT_BY_CLASS.html
+athena.commands/index_SORT_BY_CLASS_DESC.html
+athena.commands/index_SORT_BY_LINE.html
+athena.commands/index_SORT_BY_LINE_DESC.html
+athena.commands/index_SORT_BY_METHOD.html
+athena.commands/index_SORT_BY_METHOD_DESC.html
+athena.commands/index_SORT_BY_NAME_DESC.html
+athena.commands/.classes/AddCommand.html
+athena.commands/.classes/Command.html
+athena.commands/.classes/DeleteCommand.html
+athena.commands/.classes/DoneCommand.html
+athena.commands/.classes/EditCommand.html
+athena.commands/.classes/ExitCommand.html
+athena.commands/.classes/HelpCommand.html
+athena.commands/.classes/ListCommand.html
+athena.commands/.classes/ViewCommand.html
+athena.exceptions/index.html
+athena.exceptions/index_SORT_BY_BLOCK.html
+athena.exceptions/index_SORT_BY_BLOCK_DESC.html
+athena.exceptions/index_SORT_BY_CLASS.html
+athena.exceptions/index_SORT_BY_CLASS_DESC.html
+athena.exceptions/index_SORT_BY_LINE.html
+athena.exceptions/index_SORT_BY_LINE_DESC.html
+athena.exceptions/index_SORT_BY_METHOD.html
+athena.exceptions/index_SORT_BY_METHOD_DESC.html
+athena.exceptions/index_SORT_BY_NAME_DESC.html
+athena.exceptions/.classes/AddMissingRequiredParametersException.html
+athena.exceptions/.classes/CommandException.html
+athena.exceptions/.classes/DeleteInvalidIndexException.html
+athena.exceptions/.classes/DeleteNoIndexException.html
+athena.exceptions/.classes/DoneInvalidIndexException.html
+athena.exceptions/.classes/DoneNoIndexException.html
+athena.exceptions/.classes/EditNoIndexException.html
+athena.exceptions/.classes/EmptyTaskListException.html
+athena.exceptions/.classes/InvalidCommandException.html
+athena.exceptions/.classes/TaskNotFoundException.html
+athena.exceptions/.classes/ViewInvalidIndexException.html
+athena.exceptions/.classes/ViewNoIndexException.html
+athena.task/index.html
+athena.task/index_SORT_BY_BLOCK.html
+athena.task/index_SORT_BY_BLOCK_DESC.html
+athena.task/index_SORT_BY_CLASS.html
+athena.task/index_SORT_BY_CLASS_DESC.html
+athena.task/index_SORT_BY_LINE.html
+athena.task/index_SORT_BY_LINE_DESC.html
+athena.task/index_SORT_BY_METHOD.html
+athena.task/index_SORT_BY_METHOD_DESC.html
+athena.task/index_SORT_BY_NAME_DESC.html
+athena.task.taskfilter/index.html
+athena.task.taskfilter/index_SORT_BY_BLOCK.html
+athena.task.taskfilter/index_SORT_BY_BLOCK_DESC.html
+athena.task.taskfilter/index_SORT_BY_CLASS.html
+athena.task.taskfilter/index_SORT_BY_CLASS_DESC.html
+athena.task.taskfilter/index_SORT_BY_LINE.html
+athena.task.taskfilter/index_SORT_BY_LINE_DESC.html
+athena.task.taskfilter/index_SORT_BY_METHOD.html
+athena.task.taskfilter/index_SORT_BY_METHOD_DESC.html
+athena.task.taskfilter/index_SORT_BY_NAME_DESC.html
+athena.task.taskfilter/.classes/FlexibleTimeFilter.html
+athena.task.taskfilter/.classes/ForecastFilter.html
+athena.task.taskfilter/.classes/ImportanceFilter.html
+athena.task.taskfilter/.classes/TaskFilter.html
+athena.task/.classes/Task.html
+athena.task/.classes/Time.html
+athena.timetable/index.html
+athena.timetable/index_SORT_BY_BLOCK.html
+athena.timetable/index_SORT_BY_BLOCK_DESC.html
+athena.timetable/index_SORT_BY_CLASS.html
+athena.timetable/index_SORT_BY_CLASS_DESC.html
+athena.timetable/index_SORT_BY_LINE.html
+athena.timetable/index_SORT_BY_LINE_DESC.html
+athena.timetable/index_SORT_BY_METHOD.html
+athena.timetable/index_SORT_BY_METHOD_DESC.html
+athena.timetable/index_SORT_BY_NAME_DESC.html
+athena.timetable/.classes/Timetable.html
+athena.timetable/.classes/TimetableDay.html
+athena/.classes/Athena.html
+athena/.classes/Forecast.html
+athena/.classes/Importance.html
+athena/.classes/Parser.html
+athena/.classes/Recurrence.html
+athena/.classes/Storage.html
+athena/.classes/TaskList.html
+athena/.classes/TimeAllocator.html
+athena/.classes/Ui.html
