Add Log and TimeSlot classes
part of refactoring TimeAllocator

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ athena/.classes/Storage.html
 athena/.classes/TaskList.html
 athena/.classes/TimeAllocator.html
 athena/.classes/Ui.html
+data - Copy.csv
